SimpleComplex/Utils 1.x, 2018-06-24
-----------------------------------
- Major version last fixes (irregularity, however version 1.7 seem unused yet):
  deprecated classes PathFileList and PathFileListUnique removed from source,
  and PathList method clear() renamed (was reset()).
- Release 1.7.1.

SimpleComplex/Utils 1.x, 2018-06-24
-----------------------------------
- Utils pathReplaceDocumentRoot() replacer is now a class constant,
  and default is now [doc_root]; was [document_root].
- Utils pathReplaceDocumentRoot() new third parameter (bool) leading.
- Utils vendorDir(), relative to document root.
- PathList bug: has itemValue property; not customValue.
- PathList record whether paths are recorded in values, keys or not at all.
- PathList requireUnique _are_ itemValue mutually compatible
- PathList listDocumentRootReplaced(); though not when requireUnique+itemValue.
- Release 1.7.

SimpleComplex/Utils 1.x, 2018-06-23
-----------------------------------
- Array merge unique recursive erring when non-unique assoc key and both values
  aren't array.

SimpleComplex/Utils 1.x, 2018-06-19
-----------------------------------
- PathList features skipUnreadable, itemValue, customFilter.
- Release 1.6.

SimpleComplex/Utils 1.x, 2018-06-18
-----------------------------------
- PathList replaces PathFileList and PathFileListUnique, having better
 and extendable filter capabilities and supporting finding dirs.

SimpleComplex/Utils 1.x, 2018-06-17
-----------------------------------
- PathFileListUnique throw FileNonUniqueException to ease identification
  of error; RuntimeException too generic.

SimpleComplex/Utils 1.x, 2018-06-16
-----------------------------------
- PathFileList constructor allow leading dot in requireExtensions.

SimpleComplex/Utils 1.x, 2018-06-14
-----------------------------------
- PathFileList didn't match long extensions exactly.

SimpleComplex/Utils 1.x, 2018-06-03
-----------------------------------